# mutube

./: README.md  auth.py  bun.lockb  channel.py  main.py  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  utils.py  video.py
src/app/: layout.tsx  page.tsx
src/app/[channelId]/: page.tsx
src/app/[channel]/: page.tsx
src/app/api/predictions/: route.ts
src/app/tracked-channels/: page.tsx
src/components/: add-channel-form.tsx  channel-row.tsx  youtube-video-card.tsx
src/components/ui/: search.tsx
src/components/ui/custom/: search.tsx
src/lib/: utils.ts
src/types/: index.d.ts
