[project]
name = "mutube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.168.0",
    "google-auth-oauthlib>=1.2.2",
    "rich>=14.0.0",
    "xmltodict>=0.14.2",
]
